Fix: beach-2-hall, left align txt

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
   font-family: Arial, Helvetica, sans-serif;
   border: 1px solid black;
   padding: 1em;
+  text-align: left;
 }
 
 
